<resources>
    <string name="app_name">NoDinero</string>
    <string name="save">Save</string>
    <string name="saveAndBack">Save and Back</string>
    <string name="cancel">Cancel</string>

    <!-- Fragment titles -->
    <string name="account_add_title">Add Account</string>
    <string name="account_edit_title">Edit Account</string>
...
    <string name="expense_overview_title">Expense Overview</string>
    <string name="template_add_title">Add Template</string>
    <string name="template_edit_title">Edit Template</string>
    <string name="template_overview_title">Template Overview</string>

    <!-- Menu items -->
    <string name="add_account">Add Account</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_profile">Profile</string>
    <string name="account_overview">Home</string>
    <string name="view_map">Map</string>
    <string name="view_report">Reports</string>

    <!-- Template -->
    <string name="template_delete">Delete</string>
    <string name="template_overview">Templates</string>

    <!-- Add Account Items -->
    <string name="account_name">Name</string>
    <string name="account_type">Type</string>
    <string name="account_initbalance">Initial Balance</string>
    <string name="account_currency">Currency</string>
    <string name="account_delete">Delete</string>
    <string name="accounts">Accounts</string>
    <string-array name="account_types">
...

    <string-array name="currencies">
        <item>EUR</item>
        <item>USD</item>
    </string-array>

    <string name="add_expense">Add Expense</string>
    <string name="add_template">Add Template</string>

    <!-- Add Expense Items -->
    <string name="expense_name">Name</string>
    <string name="expense_category">Category</string>
    <string name="expense_account">Account</string>
    <string name="expense_value">Value</string>
    <string name="expense_date">Date</string>
    <string name="expense_account_label">Account</string>
    <string name="expense_category_label">Category</string>
    <string name="expense_value_label">Value</string>
    <string name="expense_date_label">Date</string>
    <string name="dummy_date">2000-01-01</string>
...

    <!-- HelperS Strings -->
    <string name="no_back_stack">noBackStack</string>
    <string name="simple_date_format">MM-dd-yyyy</string>

    <!-- Profile -->
    <string name="profile_name">Name</string>
    <string name="profile_default_language">Language</string>
    <string name="profile_default_currency">Currency</string>
    <string name="profile_intro">Show Intro</string>
    <string name="profile_password">Password</string>

    <!-- Login Page -->
    <string name="login">Login</string>
    <string name="error_no_login">Login not possible: wrong or no password</string>
...
