<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/fragment_expense_add"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
...
                android:orientation="horizontal"
                android:layout_centerHorizontal="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/button_image"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_weight="0.5"
                android:text="@string/take_picture" />

             <android.support.v7.widget.AppCompatButton
...
                android:id="@+id/button_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                style="@style/Base.Widget.AppCompat.Button.Borderless" />
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/button_save_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/saveAndBack"
                style="@style/Base.Widget.AppCompat.Button.Borderless" />
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/button_edit"
...
